# MyTapGameServer

./: build.gradle  gradle.properties  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/mytapgameserver/server/: IRemoteProcess.aidl  IShizukuApplication.aidl  IShizukuService.aidl  IShizukuServiceConnection.aidl
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/android/content/: ContextHidden.java
app/src/main/java/android/os/: DeathRecipient.java  IBinder.java  UserHandleHidden.java
app/src/main/java/com/example/mytapgameserver/: MainActivity.java
app/src/main/java/com/example/mytapgameserver/server/: AbiUtil.java  ClientManager.java  ClientRecord.java  ConfigManager.java  HandlerUtil.java  MyPersistentServer.java  OsUtils.java  ParcelFileDescriptorUtil.java  RemoteProcessHolder.java  ServerLog.java  Service.java  UserHandleCompat.java  UserService.java  UserServiceRecord.java
app/src/main/java/rikka/rish/: RishConfig.java
gradle/wrapper/: gradle-wrapper.properties
